--- a/public/css/app.css
+++ b/public/css/app.css
@@ -704,6 +704,12 @@ video {
 .mb-0{
   margin-bottom: 0px;
 }
+.mb-\[10vh\]{
+  margin-bottom: 10vh;
+}
+.block{
+  display: block;
+}
 .flex{
   display: flex;
 }
@@ -722,6 +728,9 @@ video {
 .h-16{
   height: 4rem;
 }
+.h-\[100vh\]{
+  height: 100vh;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -733,6 +742,10 @@ video {
 }
 .w-auto{
   width: auto;
+}
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .max-w-6xl{
   max-width: 72rem;
@@ -798,8 +811,14 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-\[32px\]{
+  font-size: 32px;
+}
 .font-semibold{
   font-weight: 600;
+}
+.font-bold{
+  font-weight: 700;
 }
 .leading-7{
   line-height: 1.75rem;
