--- a/resources/sass/5themes/_theme.scss
+++ b/resources/sass/5themes/_theme.scss
@@ -2,4 +2,6 @@ html {
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    
+    font-family: 'Nunito', sans-serif;
 }
