--- a/public/css/app.css
+++ b/public/css/app.css
@@ -652,6 +652,9 @@ video {
 .fixed{
   position: fixed;
 }
+.absolute{
+  position: absolute;
+}
 .relative{
   position: relative;
 }
@@ -661,8 +664,14 @@ video {
 .right-0{
   right: 0px;
 }
+.right-\[5px\]{
+  right: 5px;
+}
 .m-0{
   margin: 0px;
+}
+.m-auto{
+  margin: auto;
 }
 .mx-auto{
   margin-left: auto;
@@ -695,6 +704,9 @@ video {
 .-mt-px{
   margin-top: -1px;
 }
+.ml-\[5px\]{
+  margin-left: 5px;
+}
 .mb-3{
   margin-bottom: 0.75rem;
 }
@@ -709,6 +721,12 @@ video {
 }
 .mb-2{
   margin-bottom: 0.5rem;
+}
+.mb-\[20px\]{
+  margin-bottom: 20px;
+}
+.mb-\[10px\]{
+  margin-bottom: 10px;
 }
 .block{
   display: block;
@@ -761,6 +779,9 @@ video {
 }
 .max-w-6xl{
   max-width: 72rem;
+}
+.cursor-pointer{
+  cursor: pointer;
 }
 .appearance-none{
   -webkit-appearance: none;
@@ -818,6 +839,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
+.bg-yellow-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
+}
+.bg-slate-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
 .p-6{
   padding: 1.5rem;
 }
@@ -826,6 +855,12 @@ video {
 }
 .p-\[20px\]{
   padding: 20px;
+}
+.p-\[5px\]{
+  padding: 5px;
+}
+.p-\[16px\]{
+  padding: 16px;
 }
 .py-4{
   padding-top: 1rem;
@@ -864,6 +899,9 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-\[30px\]{
+  font-size: 30px;
+}
 .text-\[32px\]{
   font-size: 32px;
 }
@@ -879,6 +917,9 @@ video {
 }
 .leading-7{
   line-height: 1.75rem;
+}
+.leading-\[1\]{
+  line-height: 1;
 }
 .leading-tight{
   line-height: 1.25;
@@ -911,6 +952,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-red-600{
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -918,10 +963,6 @@ video {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-.text-red-600{
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -961,18 +1002,106 @@ html {
   -moz-osx-font-smoothing: grayscale;
   font-family: "Nunito", sans-serif;
 }
+
+.modal-container {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-container .modal-item {
+  max-height: 100vh;
+  overflow: auto;
+  margin-top: 2rem;
+  background-color: #f3f3f3;
+  min-width: 300px;
+}
+
+.modal-container.active {
+  display: flex;
+}
+
+.pi-form p{
+  margin-bottom: 20px;
+}
+
+.pi-form label{
+  margin-bottom: 0.5rem;
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.pi-form input:not([type=checkbox]){
+  display: block;
+  width: 100%;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  padding: 5px;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.pi-form input:not([type=checkbox]):focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
+
+.pi-form select{
+  display: block;
+  width: 100%;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  padding: 5px;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.pi-form select:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+}
+
 .hover\:bg-gray-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
+
 .hover\:text-gray-700:hover{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
+
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
 @media (prefers-color-scheme: dark){
   .dark\:border-gray-700{
     --tw-border-opacity: 1;
@@ -999,6 +1128,7 @@ html {
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 }
+
 @media (min-width: 640px){
   .sm\:ml-0{
     margin-left: 0px;
@@ -1035,6 +1165,7 @@ html {
     text-align: right;
   }
 }
+
 @media (min-width: 768px){
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1046,6 +1177,7 @@ html {
     border-left-width: 1px;
   }
 }
+
 @media (min-width: 1024px){
   .lg\:px-8{
     padding-left: 2rem;
