--- a/public/css/app.css
+++ b/public/css/app.css
@@ -667,6 +667,12 @@ video {
 .right-\[5px\]{
   right: 5px;
 }
+.top-\[20px\]{
+  top: 20px;
+}
+.left-\[20px\]{
+  left: 20px;
+}
 .m-auto{
   margin: auto;
 }
@@ -730,6 +736,9 @@ video {
 }
 .ml-\[10px\]{
   margin-left: 10px;
+}
+.mr-\[20px\]{
+  margin-right: 20px;
 }
 .block{
   display: block;
@@ -852,13 +861,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
-.bg-slate-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
 .bg-green-500{
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 .bg-yellow-500{
   --tw-bg-opacity: 1;
@@ -1112,14 +1121,14 @@ html {
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
-.hover\:bg-gray-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-green-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-yellow-700:hover{
