--- a/public/css/app.css
+++ b/public/css/app.css
@@ -740,6 +740,9 @@ video {
 .mr-\[20px\]{
   margin-right: 20px;
 }
+.ml-\[20px\]{
+  margin-left: 20px;
+}
 .block{
   display: block;
 }
@@ -766,6 +769,9 @@ video {
 }
 .min-h-\[100vh\]{
   min-height: 100vh;
+}
+.min-h-\[calc\(100vh-108px\)\]{
+  min-height: calc(100vh - 108px);
 }
 .w-5{
   width: 1.25rem;
@@ -799,6 +805,9 @@ video {
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.items-start{
+  align-items: flex-start;
 }
 .items-center{
   align-items: center;
@@ -917,6 +926,12 @@ video {
 }
 .pr-\[20px\]{
   padding-right: 20px;
+}
+.pt-\[108px\]{
+  padding-top: 108px;
+}
+.pt-\[calc\(108px\+50px\)\]{
+  padding-top: calc(108px + 50px);
 }
 .text-center{
   text-align: center;
