--- a/public/css/app.css
+++ b/public/css/app.css
@@ -792,8 +792,14 @@ video {
 .min-w-\[300px\]{
   min-width: 300px;
 }
+.min-w-\[max\(250px\2c calc\(100vw-100px\)\)\]{
+  min-width: max(250px,calc(100vw - 100px));
+}
 .max-w-6xl{
   max-width: 72rem;
+}
+.max-w-\[100vw\]{
+  max-width: 100vw;
 }
 .cursor-pointer{
   cursor: pointer;
@@ -823,6 +829,9 @@ video {
 }
 .overflow-hidden{
   overflow: hidden;
+}
+.overflow-x-scroll{
+  overflow-x: scroll;
 }
 .rounded-lg{
   border-radius: 0.5rem;
@@ -1207,6 +1216,9 @@ html {
   }
   .sm\:h-20{
     height: 5rem;
+  }
+  .sm\:min-w-\[300px\]{
+    min-width: 300px;
   }
   .sm\:items-center{
     align-items: center;
