--- a/public/css/app.css
+++ b/public/css/app.css
@@ -963,6 +963,9 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-\[12px\]{
+  font-size: 12px;
+}
 .font-semibold{
   font-weight: 600;
 }
