--- a/public/css/app.css
+++ b/public/css/app.css
@@ -673,6 +673,21 @@ video {
 .left-\[20px\]{
   left: 20px;
 }
+.top-\[-3px\]{
+  top: -3px;
+}
+.top-\[-30px\]{
+  top: -30px;
+}
+.left-0{
+  left: 0px;
+}
+.right-\[30px\]{
+  right: 30px;
+}
+.right-\[0\]{
+  right: 0;
+}
 .m-auto{
   margin: auto;
 }
@@ -764,6 +779,9 @@ video {
 .h-16{
   height: 4rem;
 }
+.h-\[25px\]{
+  height: 25px;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -786,6 +804,9 @@ video {
 .w-full{
   width: 100%;
 }
+.w-\[25px\]{
+  width: 25px;
+}
 .min-w-\[300px\]{
   min-width: 300px;
 }
@@ -797,6 +818,10 @@ video {
 }
 .max-w-\[100vw\]{
   max-width: 100vw;
+}
+.scale-x-\[-1\]{
+  --tw-scale-x: -1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer{
   cursor: pointer;
@@ -835,6 +860,9 @@ video {
 }
 .rounded{
   border-radius: 0.25rem;
+}
+.rounded-full{
+  border-radius: 9999px;
 }
 .border{
   border-width: 1px;
