--- a/public/css/app.css
+++ b/public/css/app.css
@@ -673,9 +673,6 @@ video {
 .left-\[20px\]{
   left: 20px;
 }
-.top-\[-3px\]{
-  top: -3px;
-}
 .top-\[-30px\]{
   top: -30px;
 }
@@ -740,12 +737,6 @@ video {
 .mb-0{
   margin-bottom: 0px;
 }
-.ml-\[20px\]{
-  margin-left: 20px;
-}
-.mr-\[20px\]{
-  margin-right: 20px;
-}
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -755,8 +746,17 @@ video {
 .mb-2{
   margin-bottom: 0.5rem;
 }
+.ml-\[20px\]{
+  margin-left: 20px;
+}
+.mr-\[20px\]{
+  margin-right: 20px;
+}
 .ml-\[10px\]{
   margin-left: 10px;
+}
+.mb-8{
+  margin-bottom: 2rem;
 }
 .block{
   display: block;
@@ -782,6 +782,9 @@ video {
 .h-\[25px\]{
   height: 25px;
 }
+.h-\[30px\]{
+  height: 30px;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -806,6 +809,9 @@ video {
 }
 .w-\[25px\]{
   width: 25px;
+}
+.w-\[30px\]{
+  width: 30px;
 }
 .min-w-\[300px\]{
   min-width: 300px;
@@ -904,6 +910,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
 .bg-yellow-500{
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
@@ -912,13 +926,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.bg-green-500{
+.bg-gray-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-.bg-slate-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .p-6{
   padding: 1.5rem;
@@ -954,6 +964,10 @@ video {
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.px-\[20px\]{
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .pt-8{
   padding-top: 2rem;
@@ -1167,6 +1181,16 @@ html {
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
+.hover\:bg-gray-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-yellow-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(161 98 7 / var(--tw-bg-opacity));
@@ -1175,16 +1199,6 @@ html {
 .hover\:bg-red-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-green-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-700:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-700:hover{
