--- a/public/css/app.css
+++ b/public/css/app.css
@@ -752,11 +752,14 @@ video {
 .mr-\[20px\]{
   margin-right: 20px;
 }
+.mb-8{
+  margin-bottom: 2rem;
+}
 .ml-\[10px\]{
   margin-left: 10px;
 }
-.mb-8{
-  margin-bottom: 2rem;
+.mr-\[5px\]{
+  margin-right: 5px;
 }
 .block{
   display: block;
@@ -781,9 +784,6 @@ video {
 }
 .h-\[25px\]{
   height: 25px;
-}
-.h-\[30px\]{
-  height: 30px;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -810,8 +810,8 @@ video {
 .w-\[25px\]{
   width: 25px;
 }
-.w-\[30px\]{
-  width: 30px;
+.w-\[100\%\]{
+  width: 100%;
 }
 .min-w-\[300px\]{
   min-width: 300px;
@@ -824,6 +824,14 @@ video {
 }
 .max-w-\[100vw\]{
   max-width: 100vw;
+}
+.rotate-\[-90deg\]{
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.rotate-\[90deg\]{
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-x-\[-1\]{
   --tw-scale-x: -1;
@@ -922,13 +930,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .p-6{
   padding: 1.5rem;
@@ -974,6 +982,12 @@ video {
 }
 .pt-\[calc\(108px\+50px\)\]{
   padding-top: calc(108px + 50px);
+}
+.pl-\[20px\]{
+  padding-left: 20px;
+}
+.pr-\[5px\]{
+  padding-right: 5px;
 }
 .text-center{
   text-align: center;
