--- a/public/css/app.css
+++ b/public/css/app.css
@@ -788,11 +788,23 @@ video {
 .h-\[120px\]{
   height: 120px;
 }
+.h-\[70px\]{
+  height: 70px;
+}
+.h-\[35px\]{
+  height: 35px;
+}
 .min-h-screen{
   min-height: 100vh;
 }
 .min-h-\[100vh\]{
   min-height: 100vh;
+}
+.min-h-\[1rem\]{
+  min-height: 1rem;
+}
+.min-h-\[38px\]{
+  min-height: 38px;
 }
 .w-5{
   width: 1.25rem;
@@ -815,6 +827,12 @@ video {
 }
 .w-\[100\%\]{
   width: 100%;
+}
+.w-\[70px\]{
+  width: 70px;
+}
+.w-\[35px\]{
+  width: 35px;
 }
 .min-w-\[300px\]{
   min-width: 300px;
@@ -849,6 +867,9 @@ video {
 }
 .items-start{
   align-items: flex-start;
+}
+.items-end{
+  align-items: flex-end;
 }
 .items-center{
   align-items: center;
