--- a/public/css/app.css
+++ b/public/css/app.css
@@ -990,6 +990,10 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-\[5px\]{
+  padding-left: 5px;
+  padding-right: 5px;
+}
 .pt-8{
   padding-top: 2rem;
 }
