--- a/public/css/app.css
+++ b/public/css/app.css
@@ -773,6 +773,9 @@ video {
 .hidden{
   display: none;
 }
+.aspect-square{
+  aspect-ratio: 1 / 1;
+}
 .h-5{
   height: 1.25rem;
 }
@@ -1342,5 +1345,11 @@ html {
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .lg\:pr-\[20px\]{
+    padding-right: 20px;
+  }
+  .lg\:pl-\[20px\]{
+    padding-left: 20px;
   }
 }
