--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1104,6 +1104,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
 }
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
 .underline{
   text-decoration-line: underline;
 }
