--- a/public/css/app.css
+++ b/public/css/app.css
@@ -643,6 +643,9 @@ video {
     max-width: 1921px;
   }
 }
+.pointer-events-none{
+  pointer-events: none;
+}
 .collapse{
   visibility: collapse;
 }
@@ -799,6 +802,9 @@ video {
 }
 .h-\[20px\]{
   height: 20px;
+}
+.h-\[100\%\]{
+  height: 100%;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1114,6 +1120,9 @@ video {
 .antialiased{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.opacity-0{
+  opacity: 0;
 }
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
