--- a/public/css/app.css
+++ b/public/css/app.css
@@ -776,6 +776,9 @@ video {
 .mb-12{
   margin-bottom: 3rem;
 }
+.mb-\[50px\]{
+  margin-bottom: 50px;
+}
 .block{
   display: block;
 }
@@ -890,6 +893,9 @@ video {
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-col{
+  flex-direction: column;
 }
 .items-start{
   align-items: flex-start;
@@ -1386,8 +1392,17 @@ html {
   .lg\:left-auto{
     left: auto;
   }
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+  .lg\:mb-0{
+    margin-bottom: 0px;
+  }
   .lg\:min-w-\[720px\]{
     min-width: 720px;
+  }
+  .lg\:flex-row{
+    flex-direction: row;
   }
   .lg\:px-8{
     padding-left: 2rem;
